Fix bank/cards overlap and text positioning
- Add margin-top: -30px to cards wrapper for more overlap with bank icon
- Position text at bottom: 5px to overlap lower part of cards
- Move text to left: 60px to be over the cards

--- a/css/style.css
+++ b/css/style.css
@@ -442,8 +442,7 @@ main {
     transition: all 0.3s;
     position: relative;
     z-index: 2;
-    margin-bottom: -80px;
-    margin-top: 5px;
+    margin-bottom: -45px;
 }
 
 .bank.closed .bank-icon {
@@ -453,6 +452,7 @@ main {
 
 .bank-cards-wrapper {
     position: relative;
+    margin-top: -30px;
 }
 
 .bank-cards {
@@ -479,8 +479,8 @@ main {
     font-size: 0.9rem;
     font-weight: bold;
     position: absolute;
-    left: 200px;
-    bottom: 128px;
+    left: 60px;
+    bottom: 5px;
     text-align: center;
     white-space: nowrap;
     z-index: 3;
